Fix de spacing en tabla

--- a/src/components/Blocks/Table/table.module.scss
+++ b/src/components/Blocks/Table/table.module.scss
@@ -57,10 +57,12 @@
 
     p {
       @include text-styles;
+      line-height: 32px;
     }
 
     a {
       @include link-styles;
+      line-height: 32px;
     }
   }
 }
